--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -158,8 +158,6 @@
     <ClInclude Include="src\Events\MouseEvent.h" />
     <ClInclude Include="src\Input.h" />
     <ClInclude Include="src\KeyCode.h" />
-    <ClInclude Include="src\Layer\DebugLayer.h" />
-    <ClInclude Include="src\Layer\GameLayer.h" />
     <ClInclude Include="src\Layer\ImGUILayer.h" />
     <ClInclude Include="src\Layer\Layer.h" />
     <ClInclude Include="src\Layer\LayerStack.h" />
@@ -182,6 +180,7 @@
     <ClInclude Include="src\Renderer\Texture.h" />
     <ClInclude Include="src\Renderer\VertexArray.h" />
     <ClInclude Include="src\Timestep.h" />
+    <ClInclude Include="src\UUID.h" />
     <ClInclude Include="src\Utils\PlatformUtils.h" />
     <ClInclude Include="src\Window.h" />
     <ClInclude Include="src\pch.h" />
@@ -208,6 +207,7 @@
     <ClCompile Include="src\Renderer\Shader.cpp" />
     <ClCompile Include="src\Renderer\Texture.cpp" />
     <ClCompile Include="src\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\UUID.cpp" />
     <ClCompile Include="src\Utils\PlatformUtils.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
