--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="src\Layer">
       <UniqueIdentifier>{B99552B3-2500-072A-6E3E-B8CFDAE7E47E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Math">
+      <UniqueIdentifier>{261422CF-12E1-7CDA-3BFA-6A822726B268}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
@@ -60,12 +63,6 @@
     <ClInclude Include="src\KeyCode.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Layer\DebugLayer.h">
-      <Filter>src\Layer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Layer\GameLayer.h">
-      <Filter>src\Layer</Filter>
-    </ClInclude>
     <ClInclude Include="src\Layer\ImGUILayer.h">
       <Filter>src\Layer</Filter>
     </ClInclude>
@@ -80,6 +77,9 @@
     </ClInclude>
     <ClInclude Include="src\Main.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Mathematics.h">
+      <Filter>src\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\MouseCode.h">
       <Filter>src</Filter>
@@ -129,6 +129,9 @@
     <ClInclude Include="src\Timestep.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\UUID.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="src\Utils\PlatformUtils.h">
       <Filter>src\Utils</Filter>
     </ClInclude>
@@ -141,7 +144,6 @@
     <ClInclude Include="vendor\stb\stb_image.h">
       <Filter>vendor\stb</Filter>
     </ClInclude>
-    <ClInclude Include="src\Math\Mathematics.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp">
@@ -155,6 +157,9 @@
     </ClCompile>
     <ClCompile Include="src\Layer\LayerStack.cpp">
       <Filter>src\Layer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Math\Mathematics.cpp">
+      <Filter>src\Math</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
       <Filter>src\Platform\OpenGL</Filter>
@@ -201,6 +206,9 @@
     <ClCompile Include="src\Renderer\VertexArray.cpp">
       <Filter>src\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\UUID.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="src\Utils\PlatformUtils.cpp">
       <Filter>src\Utils</Filter>
     </ClCompile>
@@ -210,6 +218,5 @@
     <ClCompile Include="vendor\stb\stb_image.cpp">
       <Filter>vendor\stb</Filter>
     </ClCompile>
-    <ClCompile Include="src\Math\Mathematics.cpp" />
   </ItemGroup>
 </Project>
