--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Core/vendor/glm"]
 	path = Core/vendor/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "Core/vendor/box2d"]
+	path = Core/vendor/box2d
+	url = https://github.com/rifkikesepara/box2d.git
