--- a/ProjectInvasion/imgui.ini
+++ b/ProjectInvasion/imgui.ini
@@ -4,8 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug]
-Pos=18,11
-Size=231,248
+Pos=32,25
+Size=271,276
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+ViewportPos=867,261
+ViewportId=0xE927CF2F
+Size=550,680
 Collapsed=0
 
 [Docking][Data]
